# fatprogs

./: .gitignore  AUTHORS  CHANGES  ChangeLog  Makefile  Makefile.am  README.md  autogen.sh  configure.ac  version.h
.github/workflow/: main.yml
.github/workflows/: main.yml  opencode-review.yml
dosfsck/: Makefile  boot.c  boot.h  check.c  check.h  common.c  common.h  dosfsck.c  dosfsck.h  dosfslabel.c  fat.c  fat.h  file.c  io.c  lfn.c  lfn.h
include/: boot.h  check.h  common.h  dosfs.h  dosfsck.h  fat.h  file.h  io.h  lfn.h  version.h
mkdosfs/: mkdosfs.8  mkdosfs.c
old_doc/: CHANGES.mkdosfs
src/: Makefile  Makefile.am  boot.c  check.c  common.c  dosfsck.8  dosfsck.c  dosfsdump.8  dosfsdump.c  dosfslabel.c  fat.c  file.c  io.c  lfn.c  mkdosfs.8  mkdosfs.c
tests/: test_all_images.sh
v2.11_patches/DEBIAN/debian/dosfstools-2.11/debian/: changelog  control  copyright  docs  lintian-overrides  rules
v2.11_patches/DEBIAN/debian/dosfstools-2.11/debian/patches/: 00list  01-argfix.dpatch  02-fortify.dpatch  03-label.dpatch  04-unaligned-memory.dpatch  05-o-excl.dpatch  06-determine-sector-size.dpatch  07-manpage-spelling.dpatch  08-manpage-drop.dpatch  09-manpage-fat32.dpatch  10-manpage-synopsis.dpatch  11-memory-efficiency.dpatch  12-zero-slot.dpatch  13-getopt.dpatch  15-manpage-files.dpatch  99-conglomeration.dpatch
v2.11_patches/DEBIAN/ubuntu/: dosfstools_2.11-2.3ubuntu1_2.11-5.diff  dosfstools_2.11-5.diff
v2.11_patches/ETC/: dosfstools-2.11-label.patch, NONE, 1.1 dosfstools.spec, 1.28, 1.29
v2.11_patches/ETC/nokia/: dosfstools_nokia_1.2.11maemo8-2+0m5.diff.txt  dosfstools_nokia_1.2.11maemo8-6+0m6.diff.txt
v2.11_patches/FEDORA/: dosfstools-2.11-9.el5.src.rpm
v2.11_patches/FEDORA/SULinux/: dosfstools-2.11-6.2.SUL2.src.rpm  dosfstools-2.11-fortify.patch  dosfstools-2.11-label.patch  dosfstools.spec
v2.11_patches/FEDORA/redhat/: dosfstools-2.11-geom0.patch  dosfstools-2.11-label.patch  dosfstools.spec  redhat-dosfstools-2.11-9.el5.src.rpm
v2.11_patches/SUSE/suse/: dosfstools-2.11-buffer.patch  dosfstools-2.11-filename-buffer-overflow.patch  dosfstools-2.11-linuxfs.patch  dosfstools-2.11-mkdosfs-geo0.diff  dosfstools-2.11-o_excl.patch  dosfstools-2.11-unaligned.patch  dosfstools-2.11-unsupported-sector-size.patch  dosfstools-2.11.src.tar.bz2  dosfstools-2.11_determine-sector-size.patch  dosfstools.spec  suse-dosfstools-2.11-121.122.2.src.rpm
v2.11_patches/YOCTO/hp_webos/: dosfstools-2.11-patches.tgz  reinstall.patch  remove_invalid_test.patch
v2.11_patches/YOCTO/yocto_meta-gplv2/: dosfstools_2.11.bb
v2.11_patches/YOCTO/yocto_meta-gplv2/dosfstools-2.11/: fixing-out-of-bound-writes.patch
